--- a/style.css
+++ b/style.css
@@ -1,18 +1,49 @@
 html {
   scroll-behavior: smooth;
+  letter-spacing: 2;
 }
+
+html {
+  color: white;
+  /* animation: color-animation 3s ease infinite; */
+}
+/* @keyframes color-animation {
+  0% {
+    color: black;
+  }
+  50% {
+    color: white;
+  }
+  100% {
+    color: black;
+  }
+} */
 body {
   margin: 0;
-  background: linear-gradient(
+  /* background: linear-gradient(
     300deg,
-    rgb(250, 161, 255),
-    rgb(154, 216, 211),
-    rgb(0, 255, 255)
+    rgb(255, 255, 255),
+    rgb(0, 0, 0),
+    rgb(255, 255, 255)
   );
-  background-size: 180% 180%;
-  animation: gradient-animation 3s ease infinite;
+  background-size: 180% 180%; */
+  background-color: black;
+  /* background-color: white; */
+  /* animation: gradient-animation 3s ease infinite; */
+  /* animation: switchcolor 1s ease infinite; */
 }
-@keyframes gradient-animation {
+/* @keyframes gradient-animation {
+  0% {
+    background-color: white;
+  }
+  50% {
+    background-color: black;
+  }
+  100% {
+    background-color: white;
+  }
+} */
+/* @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
   }
@@ -22,7 +53,25 @@ body {
   100% {
     background-position: 0% 50%;
   }
-}
+} */
+/* @keyframes switchcolor {
+  from {
+    background: linear-gradient(
+      300deg,
+      rgb(250, 161, 255),
+      rgb(154, 216, 211),
+      rgb(0, 255, 255)
+    );
+  }
+  to {
+    background: linear-gradient(
+      120deg,
+      rgb(255, 247, 156),
+      rgb(216, 255, 161),
+      rgb(161, 255, 189)
+    );
+  }
+} */
 
 .container {
   max-width: 1000px;
@@ -47,21 +96,17 @@ section.profile {
 
 #profilephoto {
   border-radius: 50%;
-  border: 2px solid blue;
+  border: 2px solid white;
 }
 
 .about {
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 20px;
   padding: 10px;
   position: relative;
   margin: 20px;
   display: flex;
   flex-direction: row-reverse;
-}
-
-h1 {
-  color: black;
 }
 
 nav {
@@ -85,7 +130,7 @@ nav {
 
 .hyperlink-profile {
   color: white;
-  background-color: rgb(112, 112, 193);
+  background-color: grey;
   padding: 10px;
   border-radius: 5px;
   text-decoration: none;
@@ -128,18 +173,16 @@ nav > div > .hyperlink-profile {
   width: 250px;
   height: 250px;
   position: relative;
-  top: -50px;
-  display: none;
-}
-.right-circle {
   display: flex;
-  justify-content: flex-end;
   display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .circle {
   border-radius: 50%;
   position: absolute;
+  border: 1px solid yellow;
 }
 .yellow {
   background-color: yellow;
@@ -147,6 +190,24 @@ nav > div > .hyperlink-profile {
 
 .green {
   background-color: greenyellow;
+}
+
+.xxxxs {
+  width: 1;
+  height: 1;
+  opacity: 50%;
+}
+
+.xxxs {
+  width: 5%;
+  height: 5%;
+  opacity: 45%;
+}
+
+.xxs {
+  width: 10%;
+  height: 10%;
+  opacity: 40%;
 }
 
 .xs {
@@ -186,9 +247,7 @@ nav > div > .hyperlink-profile {
 }
 
 @media screen and (max-width: 1000px) {
-  .left-circle {
-    display: none;
-  }
+  .left-circle,
   .right-circle {
     display: none;
   }
