--- a/style.css
+++ b/style.css
@@ -5,45 +5,16 @@ html {
 
 html {
   color: white;
-  animation: color-animation 3s ease infinite;
 }
-@keyframes color-animation {
-  0% {
-    color: black;
-  }
-  50% {
-    color: white;
-  }
-  100% {
-    color: black;
-  }
-}
+
 body {
   margin: 0;
-  /* background: linear-gradient(
-    300deg,
-    rgb(255, 255, 255),
-    rgb(0, 0, 0),
-    rgb(255, 255, 255)
-  );
-  background-size: 180% 180%; */
   background-color: black;
-  /* background-color: white; */
-  /* animation: gradient-animation 3s ease infinite; */
-  /* animation: switchcolor 1s ease infinite; */
+  background: linear-gradient(300deg, white, grey, black);
+  background-size: 180% 180%;
+  animation: gradient-animation 3s ease infinite;
 }
-/* @keyframes gradient-animation {
-  0% {
-    background-color: white;
-  }
-  50% {
-    background-color: black;
-  }
-  100% {
-    background-color: white;
-  }
-} */
-/* @keyframes gradient-animation {
+@keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
   }
@@ -53,25 +24,7 @@ body {
   100% {
     background-position: 0% 50%;
   }
-} */
-/* @keyframes switchcolor {
-  from {
-    background: linear-gradient(
-      300deg,
-      rgb(250, 161, 255),
-      rgb(154, 216, 211),
-      rgb(0, 255, 255)
-    );
-  }
-  to {
-    background: linear-gradient(
-      120deg,
-      rgb(255, 247, 156),
-      rgb(216, 255, 161),
-      rgb(161, 255, 189)
-    );
-  }
-} */
+}
 
 .container {
   max-width: 1000px;
@@ -97,6 +50,7 @@ section.profile {
   gap: 30px;
   font-size: 30px;
 }
+
 .profile-photo {
   max-width: 400px;
   border-radius: 50%;
